@@ -1,3 +1,8 @@
+2013-03-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * skeleton.ValidateD3PD_trf.py
+      - Define a logging object for pre/postExec logging to act on
+    * tagging as PATJobTransforms-00-04-43-05
+
 2013-03-21 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Adding NTUP_COMMON to Reco_trf.py.
 	* Tagging as PATJobTransforms-00-04-43-04
